# edgeml

./: .gitignore  Cargo.toml  README.md  bundle.sh  compile-nnef.sh  fastly.toml  pkg.sh  rust-toolchain.toml
.cargo/: config
demo/: index.html
docs/: index.html  script.js  style.css
src/: log.rs  main.rs  ml.rs
static-host/: Cargo.toml  fastly.toml
static-host/src/: main.rs
