[package]
name = "hackadora"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
fastly = "0.7.1"
# don't fancy tensorflow? Try: tract-kaldi, tract-onnx, tract-nnef 
tract_flavour = { package = "tract-tensorflow", version = "0.14.1" }
image = { version = "0.23.14", default-features = false, features = ["jpeg"] }
rand = "0.8.3"
